polls-app-gke/deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      # - path: /frontend/*
      #   backend:
      #     serviceName: polling-app-client
      #     servicePort: 80
      - path: /api/*
        backend:
          serviceName: polling-app-server
          servicePort: 8080
---
