polls-app-gke/deployments/polling-app-client.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-for-client
spec:
  backend:
    serviceName: polling-app-client
    servicePort: 80
